Bug 1454594 - Avoid running unordered_map static initializers. r=botond

We wrap the std::unordered_map in a StaticAutoPtr so that there's no
initialization cost, and also so that we have a smaller memory footprint
in processes that aren't using WebRender+APZ.

MozReview-Commit-ID: 9QCKiv0IzB8

--HG--
extra : rebase_source : 102d034478513f45da689bacffbc893370677ff7